fix collapsable content items info

--- a/Laser.Sources/Laser.Orchard/Themes/KrakeAdmin/Styles/krake.css
+++ b/Laser.Sources/Laser.Orchard/Themes/KrakeAdmin/Styles/krake.css
@@ -812,7 +812,8 @@ input[type="number"]:focus {
     float: right;
     width: 100%;
 }
-.contentItems .infos {
+.contentItems .infos,
+.list-more-info {
     text-align: left;
     display: inline-block;
     white-space: nowrap;
@@ -1179,9 +1180,9 @@ fieldset {
     background-color: transparent;
 }
 
-.contentItems.bulk-items .primary {
-  display: none;
-}
+/*.contentItems.bulk-items .primary {
+  //display: none;
+}*/
 
 .contentItems .summary {
   /*min-height: 140px;*/
